re PR translation/21768 (ICE in error message due to violation of coding conventions)

PR c++/21768
	* pt.c (redeclare_class_template): Change error message according
	to coding conventions.

From-SVN: r100207